Немного поработал над шрифтами. В конструкторе всех изменений не видно.

--- a/Railway_web_1.0/Railway_web_1.0.csproj
+++ b/Railway_web_1.0/Railway_web_1.0.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MainForm.aspx" />
+    <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
