--- a/Railway_web_1.0/Railway_web_1.0.csproj
+++ b/Railway_web_1.0/Railway_web_1.0.csproj
@@ -48,6 +48,12 @@
       <HintPath>.\ExcelLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Mono.Security">
+      <HintPath>..\..\..\..\Desktop\Railway\Railway\Mono.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Npgsql">
+      <HintPath>..\..\..\..\Desktop\Railway\Railway\Npgsql.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
