--- a/Railway_web_1.0/Railway_web_1.0.csproj
+++ b/Railway_web_1.0/Railway_web_1.0.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Content Include="MainForm.aspx" />
     <Content Include="StyleSheet1.css" />
+    <Content Include="updtlst.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -90,6 +91,7 @@
       <DependentUpon>MainForm.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Save.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
